updating pdf and completion overview perorities
